# trajectory_player

./: CMakeLists.txt  package.xml  readme.md
launch/: multi_trajectory_player.launch  trajectory_player.launch
scripts/: trajectory_player.py
